# fastapi-aws-lambda-docker-example

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile.lambda  Makefile  README.md  lambda_handler.py  pyproject.toml  requirements-dev.txt  requirements.txt
api/: __init__.py
infrastructure/: README.md  app.py
infrastructure/infrastructure/: api_stack.py
tests/: test_home.py
